<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.padc.travelling.activities.AttractionDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="@dimen/margin_medium_2"
            app:expandedTitleMarginStart="@dimen/margin_medium_2"
            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/iv_attraction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:src="@drawable/sample_attraction_thumbnail" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >

            <TextView
                android:id="@+id/tv_screen_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_medium"
                android:textSize="@dimen/screen_title_size"
                android:text="@string/attraction_detail_title"
                />

        </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_medium_2">

            <ImageView
                android:id="@+id/iv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_dns_black_24dp"
                android:tint="@color/primary_text"
                />

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_category"
                android:layout_alignLeft="@id/iv_category"
                android:layout_marginLeft="32dp"
                android:textSize="@dimen/text_regular_2x"
                android:fontFamily="sans-serif-light"
                />

            <ImageView
                android:id="@+id/iv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_pin_drop_black_24dp"
                android:tint="@color/primary_text"
                android:layout_below="@id/iv_category"
                android:layout_marginTop="8dp"
                />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_location"
                android:layout_below="@id/tv_category"
                android:layout_marginLeft="32dp"
                android:textSize="@dimen/text_regular_2x"
                android:fontFamily="sans-serif-light"
                android:layout_marginTop="8dp"
                />

            <Button
                android:id="@+id/btn_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:layout_below="@id/tv_location"
                android:layout_marginLeft="32dp"
                />

            <TextView
                android:id="@+id/tv_attraction_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:fontFamily="sans-serif-light"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/item_description"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_regular_2x"
                android:layout_below="@id/btn_map"/>
        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_favorite_black_24dp"
        android:tint="@color/icons"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|end|right"
        />

</android.support.design.widget.CoordinatorLayout>
